--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="자리배치기.png">
 </head>
 <body>
-    <h1>자리 배치기</h1>
+    <h1 style="font-family: '자이언츠 Inline';">자리 배치기</h1>
     <h2>인원 수와 가로 줄 수를 입력하고 시작 버튼을 눌러 자리를 배치하시오.</h2>
     <input style="font-size: 3vw; width: 15vw; border: none; border-radius: 0.5vw;" id="peopleinputer" type="number" placeholder="끝 번호">
     <input style="font-size: 3vw; width: 15vw; border: none; border-radius: 0.5vw;" id="rowsinputer" type="number" placeholder="가로 줄 수">
